--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body{
     background-size: cover ;
     background-position: center;
 }
+.header-text p{
+    margin-top: 18%;
+    font-size: 15px;
+    font-weight: 700;
+    
+}
 .conatainer{
     padding: 10px 2%;
 }
@@ -225,10 +231,10 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/backgrounf\ hd-wallpaper-3605547.jpg);
+        background-image: url(images/hd-wallpaper-3605547.jpg);
     }
     .header-text{
-        margin-top:100%;
+        margin-top:50%;
         font-size: 16px;
         padding-left: 50px;
     }
