--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/hd-wallpaper-3605547.jpg);
+        background-image: url(images/backgrounf hd-wallpaper-3605547.jpg);
     }
     .header-text{
         margin-top:50%;
